--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-A
+Para inicializar o Projeto é nescessario estar com o mesmo selecionado em seu terminal testPHPMOIO, em seguida é nescessario que seja executado o comando 'ionic serve' em seu terminal!
